--- a/app/src/main/res/layout/nav_header_boss.xml
+++ b/app/src/main/res/layout/nav_header_boss.xml
@@ -29,6 +29,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Employee Access" />
+        android:text="Boss Access" />
 
 </LinearLayout>
