--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,8 +71,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="sidebar"
-        android:text="Sidebar"/>
+        android:onClick="empLoginInitiate"
+        android:text="Login"/>
 
 
 
