--- a/app/src/main/res/layout/fragment_add_employee.xml
+++ b/app/src/main/res/layout/fragment_add_employee.xml
@@ -13,45 +13,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Employee"
+        android:gravity="center"
+        android:paddingBottom="10dp"
         android:textSize="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your fullname"
             android:id="@+id/name"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/email"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your email address"
             android:id="@+id/email"
             android:inputType="textWebEmailAddress"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your password"
             android:id="@+id/password"
             android:inputType="textPassword"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,17 +63,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/phone"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your phone number"
             android:id="@+id/phone"
             android:inputType="number"
-            android:textSize="17dp" />
+            android:textSize="13dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Employee"
             android:id="@+id/empRegister"
