--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tx_taskName"
+            android:textSize="15dp"
+            android:text="Nilesh"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tx_taskAmount"
+            android:textSize="15dp"
+            android:gravity="center"
+            android:text="Nilesh"/>
+    </LinearLayout>
     <TextView
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
-        android:id="@+id/tx_taskName"
-        android:layout_alignParentLeft="true"
-        android:text="Nilesh"
-        android:gravity="center"/>
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/tx_taskDescription"
         android:gravity="center"
-        android:layout_toRightOf="@+id/tx_taskName"
+        android:textSize="15dp"
         android:text="Nilesh"/>
+</LinearLayout>
+
     <TextView
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
-        android:id="@+id/tx_taskAmount"
-        android:gravity="center"
-        android:layout_toRightOf="@+id/tx_taskDescription"
-        android:layout_toLeftOf="@+id/tx_taskStatus"
-        android:text="Nilesh"/>
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/tx_taskStatus"
         android:gravity="center"
-        android:text="Nilesh"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:textSize="15dp"
+        android:text="Nilesh" />
 
 
-</RelativeLayout>
+</LinearLayout>
