--- a/app/src/main/res/menu/activity_manager_drawer.xml
+++ b/app/src/main/res/menu/activity_manager_drawer.xml
@@ -7,7 +7,7 @@
             android:icon="@drawable/ic_people_black_24dp"
             android:title="Employees in my group" />
         <item
-            android:id="@+id/ic_view_list_black_24dp"
+            android:id="@+id/pending_approvals"
             android:icon="@drawable/ic_view_list_black_24dp"
             android:title="Pending approvals" />
         <item
