--- a/app/src/main/res/layout/fragment_manager_for_approval.xml
+++ b/app/src/main/res/layout/fragment_manager_for_approval.xml
@@ -7,7 +7,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/managerToBeApproved"        android:layout_alignParentStart="true"
+        android:id="@+id/managerToBeApproved"
+        android:layout_alignParentStart="true"
         android:divider="#f11cff">
     </ListView>
 </RelativeLayout>
