--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="5dp">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <LinearLayout
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
@@ -29,7 +29,7 @@
             android:text="Nilesh"/>
     </LinearLayout>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/tx_taskDescription"
         android:gravity="center"
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tx_taskStatus"
         android:gravity="center"
+        android:paddingTop="5dp"
         android:textSize="15dp"
         android:text="Nilesh" />
 
